--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="about" class="py-5 bg-light">
         <div class="container">
             <h2>About Us</h2>
-            <p>We are a The Ambulance Company dedicated to providing the best services for our clients.</p>
+            <p>We are a Ambco dedicated to providing the best services for our clients.</p>
         </div>
     </section>
 
